fixed styling and alignment on about.html

--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,7 @@ select {
   /* width: 400;  */
   float: left;
 }
+
 .hero-text {
     /* outline: 4px dotted black; */
   font-size: 20px;
@@ -177,10 +178,6 @@ footer div {
   text-align: center;
 }
 
-ol li {
-  padding-bottom: 40px;
-}
-
 .left-content-panel {
   margin: 0px 30px 0px 0px;
 }
@@ -196,6 +193,7 @@ h1 {
   color: rgb(91,76,73);
   text-shadow: 3px 2px 2px rgb(93, 126, 105);
 }
+
 h2 {
   font-weight: bold;
   /* float: left ; */
@@ -218,7 +216,7 @@ p {
   color: rgb(91,76,73);
 }
 
- div p {
+div p {
   position: absolute;
   bottom: 50px; 
   left: 80px;
@@ -261,4 +259,42 @@ td {
 table, th, td {
   border: 1px solid black;
 }
+
+
+ol li {
+  list-style-type: none;
+  display: inline;
+}
+
+ol li a img {
+  display: block;
+  padding-top: 5px;
+}
+
+.about {
+  /* outline: 5px dotted green; */
+  width: 1020px;
+  margin: 0px auto;
+}
+
+.about h3 {
+  font-size: 35px;
+  color: rgb(93, 126, 105);
+  padding-bottom: 15px;
+  font-weight: bold;
+}
+.about p {
+  /* outline: 5px dotted blue; */
+  float: left;
+  margin-left: 25px;
+  width: 879px;
+  height: 200px;
+  font-size: 20px;
+}
+
+.headers {
+  /* outline: 5px black dotted; */
+}
+
+
 
